--- a/src/index.css
+++ b/src/index.css
@@ -51,7 +51,7 @@ hr {
   background-color: #f2f2f2;
   width: 100%;
   height: 100%;
-  padding-top: 20px;
+  padding-top: 50px;
 }
 
 /* TaskList */
@@ -62,6 +62,7 @@ hr {
 .tasks {
   margin: 0 auto;
   max-width: 980px;
+  display: flex;
 }
 
 .tasks-header {
@@ -72,7 +73,6 @@ hr {
 
 /* Task */
 .task {
-  margin-bottom: 15px;
   background: #fff;
   box-shadow: 0 -1px 0 #e0e0e0, 0 0 2px rgba(0,0,0,.12), 0 2px 4px rgba(0,0,0,.24);
 }
@@ -89,15 +89,26 @@ hr {
   min-height: 60px;
 }
 
-.task-lists {
-  display: flex;
-  justify-content: space-between;
+.add-task-button {
+  background: #f1c40f;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
 
 .task-list {
   width: 300px;
+  margin: 5px;
 }
 
 .task-list-title {
-  margin-bottom: 10px;
+  text-align: center;
+  padding: 10px 0;
+  color: white;
+  background: #2c3e50;
+}
+
+.task-list-title:hover {
+  color: #f1c40f;
+  cursor: pointer;
 }
